Search API 1.x, dev (xx/xx/xxxx):
---------------------------------

Search API 1.5 (05/04/2013):
----------------------------
- #1169254 by cslavoie, drunken monkey, DYdave: Added transliteration processor.
- #1959088 by drunken monkey: Fixed titles for contextual filters.
- #1792296 by andrewbelcher, drunken monkey: Added a group for Search API hooks.
- #1407844 by nbucknor: Added "exclude" option for Views contextual filters.
- #1278942 by Simon Georges, drunken monkey: Added an option to apply
  entity_access() to Views results.
- #1819412 by drunken monkey: Added clean way for retrieving an index's data
  alterations and processors.
- #1838134 by das-peter, drunken monkey: Added hook_search_api_items_indexed().
- #1471310 by drunken monkey: Fixed handling of unset fields when indexing.
- #1594762 by drunken monkey, alanom, esclapes: Fixed detection of deleted items
  in the Hierarchy data alteration.
- #1702604 by JvE, slucero: Added option for maximum date facet depth.

Search API 1.4 (01/09/2013):
----------------------------
- #1827272 by drunken monkey: Fixed regression introduced by #1777710.
- #1807622 by drunken monkey: Fixed definition of the default node index.
- #1818948 by das-peter: Fixed endless loop in
  search_api_index_specific_items_delayed().
- #1406808 by Haza, drunken monkey: Added support for date popup in exposed
  filters.
- #1823916 by aschiwi: Fixed batch_sise typos.

Search API 1.3 (10/10/2012):
----------------------------
- Patch by mr.baileys: Fixed "enable" function doesn't use security tokens.
- #1318904 by becw, das-peter, orakili, drunken monkey: Added improved handling
  for NULL values in Views.
- #1306008 by Damien Tournoud, drunken monkey: Fixed handling of negative
  facets.
- #1182912 by drunken monkey, sepgil: Added Rules action for indexing entities.
- #1507882 by jsacksick: Added "Exclude unpublished nodes" data alteration.
- #1225620 by drunken monkey: Added Batch API integration for the "Index now"
  functionality.