@@ -237,6 +237,14 @@ interface SearchApiDataSourceControllerInterface {
    */
   public function getIndexStatus(SearchApiIndex $index);
 
+  /**
+   * Get the entity type of items from this datasource.
+   *
+   * @return string|null
+   *   An entity type string if the items provided by this datasource are
+   *   entities; NULL otherwise.
+   */
+  public function getEntityType();
 }
 
 /**
@@ -263,6 +271,15 @@ abstract class SearchApiAbstractDataSourceController implements SearchApiDataSou
    * The item type for this controller instance.
    */
   protected $type;
+
+  /**
+   * The entity type for this controller instance.
+   *
+   * @var string|null
+   *
+   * @see getEntityType()
+   */
+  protected $entityType = NULL;
 
   /**
    * The info array for the item type, as specified via
@@ -314,6 +331,21 @@ abstract class SearchApiAbstractDataSourceController implements SearchApiDataSou
   public function __construct($type) {
     $this->type = $type;
     $this->info = search_api_get_item_type_info($type);
+
+    if (!empty($this->info['entity_type'])) {
+      $this->entityType = $this->info['entity_type'];
+    }
+  }
+
+  /**
+   * Get the entity type of items from this datasource.
+   *
+   * @return string|null
+   *   An entity type string if the items provided by this datasource are
+   *   entities; NULL otherwise.
+   */
+  public function getEntityType() {
+    return $this->entityType;
   }
 
   /**
@@ -333,7 +365,7 @@ abstract class SearchApiAbstractDataSourceController implements SearchApiDataSou
    */
   public function getMetadataWrapper($item = NULL, array $info = array()) {
     $info += $this->getPropertyInfo();
-    return entity_metadata_wrapper($this->type, $item, $info);
+    return entity_metadata_wrapper($this->entityType ? $this->entityType : $this->type, $item, $info);
   }
 
   /**
@@ -689,8 +721,10 @@ abstract class SearchApiAbstractDataSourceController implements SearchApiDataSou
     if ($index->item_type != $this->type) {
       $index_type = search_api_get_item_type_info($index->item_type);
       $index_type = empty($index_type['name']) ? $index->item_type : $index_type['name'];
-      $msg = t('Invalid index @index of type @index_type passed to data source controller for type @this_type.',
-          array('@index' => $index->name, '@index_type' => $index_type, '@this_type' => $this->info['name']));
+      $msg = t(
+        'Invalid index @index of type @index_type passed to data source controller for type @this_type.',
+        array('@index' => $index->name, '@index_type' => $index_type, '@this_type' => $this->info['name'])
+      );
       throw new SearchApiDataSourceException($msg);
     }
   }
