@@ -95,6 +95,9 @@ function hook_search_api_service_info_alter(array &$service_info) {
  *   - datasource controller: A class implementing the
  *     SearchApiDataSourceControllerInterface interface which will be used as
  *     the data source controller for this type.
+ *   - entity_type: (optional) If the type represents entities, the entity type.
+ *     This is used by SearchApiAbstractDataSourceController for determining the
+ *     entity type of items. Other datasource controllers might ignore this.
  *   Other, datasource-specific settings might also be placed here. These should
  *   be specified with the data source controller in question.
  *
@@ -287,7 +290,7 @@ function hook_search_api_index_items_alter(array &$items, SearchApiIndex $index)
  *   An array containing the indexed items' IDs.
  */
 function hook_search_api_items_indexed(SearchApiIndex $index, array $item_ids) {
-  if ($index->item_type == 'node') {
+  if ($index->getEntityType() == 'node') {
     // Flush page cache of the search page.
     cache_clear_all(url('search'), 'cache_page');
   }
@@ -300,8 +303,11 @@ function hook_search_api_items_indexed(SearchApiIndex $index, array $item_ids) {
  *   The SearchApiQueryInterface object representing the search query.
  */
 function hook_search_api_query_alter(SearchApiQueryInterface $query) {
-  $info = entity_get_info($index->item_type);
-  $query->condition($info['entity keys']['id'], 0, '!=');
+  // Exclude entities with ID 0. (Assume the ID field is always indexed.)
+  if ($query->getIndex()->getEntityType()) {
+    $info = entity_get_info($query->getIndex()->getEntityType());
+    $query->condition($info['entity keys']['id'], 0, '!=');
+  }
 }
 
 /**
